--- a/src/sass/_technologies-and-tools.scss
+++ b/src/sass/_technologies-and-tools.scss
@@ -26,15 +26,9 @@
 .technologies{
     width: 10%;
     margin-top: 20px;
-    background:#003566;
-    border-radius: 5px;
    
   }
   
-  .background-color{
-    border-radius: 5px;
-}
-
 .skills{
     width: 100%;
     height: 70px;
@@ -46,7 +40,7 @@
 
 .icon{
   width: 60%;
-  height: 50px;
+  height: 60px;
 }
 
 .icon img{
@@ -54,7 +48,7 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 40px;
 }
  
 .sub-title-technologies{
@@ -80,7 +74,10 @@
      }
 
     .technologies{
-        width: 10%;
+      width: 25%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
       } 
 
       .skills{
@@ -89,8 +86,8 @@
       }
 
       .icon img{
-        width: 20px;
-        height: 20px;
+        width: 35px;
+        height: 35px;
       
       }
 
