--- a/src/sass/_projects.scss
+++ b/src/sass/_projects.scss
@@ -67,6 +67,12 @@
     line-height: 25px;
 }
 
+.link-project{
+    color:$color-green;
+    font-size: 14px;
+    text-decoration: 0;
+}
+
 
   
   @media (min-width:1px) and (max-width:400px){
